--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.4
 audioop-lts==0.2.1
 audioread==3.0.1
 certifi==2025.1.31
@@ -23,12 +24,15 @@ platformdirs==4.3.6
 pooch==1.8.2
 pycparser==2.22
 pyee==12.1.1
+pyinstaller==6.12.0
+pyinstaller-hooks-contrib==2025.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-ffmpeg==2.0.12
 requests==2.32.3
 scikit-learn==1.6.1
 scipy==1.15.2
+setuptools==75.8.0
 six==1.17.0
 soundfile==0.13.1
 soxr==0.5.0.post1
